--- a/ablNeutralEdge/actuator.yaml
+++ b/ablNeutralEdge/actuator.yaml
@@ -20,7 +20,7 @@
         epsilon: [ 5.0, 5.0, 5.0 ]
         turbine_base_pos: [ 1500.0, 1500.0, 0.0 ]
         restart_filename: "blah"
-        fast_input_filename: "nrel5mw_1.fst"
+        fast_input_filename: "nrel5mw_1_{meshsize}.fst"
         turb_id:  1
         turbine_name: machine_one
 
@@ -33,6 +33,6 @@
         epsilon: [ 5.0, 5.0, 5.0 ]
         turbine_base_pos: [ 1650.0, 1650.0, 0.0 ]
         restart_filename: "blah"
-        fast_input_filename: "nrel5mw_2.fst"
+        fast_input_filename: "nrel5mw_2_{meshsize}.fst"
         turb_id:  2
         turbine_name: machine_two
